<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverviewFragment">

    <TextView
        android:id="@+id/aveTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_gravity=""
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/average_calories"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/averageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_gravity="end"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="30sp" />

    <TextView
        android:id="@+id/minTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="55dp"
        android:layout_marginStart="20dp"
        android:text="@string/minimum_calories"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/minimumTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="25dp"
        android:layout_gravity="end"
        android:text=""
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/maxTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:text="@string/maximum_calories"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/maximumTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="end"
        android:layout_marginEnd="25dp"
        android:text=""
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="@string/time_are_in_min_sec"
        />

</FrameLayout>